# trabalho-final-trab_final_lucas

./: README.md  pyproject.toml
MicroC/: __init__.py  __main__.py  ast.py  cli.py  ctx.py  errors.py  grammar.lark  node.py  parser.py  transformer.py
exemplos/: fun_escopo.mc  fun_example.mc  if.mc  var_global.mc
